# antmoc-data

./: .codeclimate.yml  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pylint.yml  python-publish.yml  python-tox.yml
.gitlab/ci/: code-quality.yml  coverage.yml  static-analysis.yml  test.yml
antmocdata/: __init__.py
antmocdata/log/: __init__.py  data.py  default_fields.json  extract.py  fields.py  options.py
antmocdata/mgxs/: __init__.py  options.py
antmocdata/mgxs/type_a/: __init__.py
antmocdata/solution/: __init__.py  convert.py  rx.py  rxh5.py  rxvtk.py
antmocmgxs/: __init__.py  material.py  materialxml.py
antmocmgxs/manip/: __init__.py  h5.py  xml.py
antmocmgxs/type_a/: elements.json  generate.py  nuclides.py  options.py
examples/c5g7/: materials.xml  xml_to_h5.py
examples/h5/: check_materials.py  convert_layout.py  fix_materials.py  load_materials.py
examples/log/: extract-records.py  logs2json.py
examples/mgxs/c5g7/: xml_to_h5.py
examples/mgxs/h5/: check-materials.py  convert-layout.py  fix-materials.py  load-materials.py
examples/mgxs/type_a/: find-sets.py  generate_mgxs.py
examples/type_a/: find_sets.py  generate_mgxs.py  infilecross
examples/xml/: fix_materials_in_xml.py
src/antmoc_mgxs/: __init__.py  baseoptions.py  material.py  materialxml.py  options.py
src/antmoc_mgxs/manip/: h5.py  (+1 more)
tests/: conftest.py  test_material.py  test_options.py
tests/mgxs/: conftest.py
tests/solution/: conftest.py  test_load_vtu.py
tests/test_manip/: conftest.py  test_manip_h5.py  test_manip_xml.py
tests/test_type_a/: conftest.py  test_infilecross.py  test_material.py
(+13 files in other folders)
