[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "antmocdata"
version = "0.1.4"
authors = [
    {name = "An Wang", email = "wangan.cs@gmail.com"},
]
license = {file = "LICENSE" }
description = "A package for ANT-MOC data manipulation."
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "baseopt",
    "h5py",
    "numpy",
    "pyevtk",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/alephpiece/antmoc-data"
Repository = "https://github.com/alephpiece/antmoc-data"

[tool.setuptools]
packages = ["antmocdata"]