[metadata]
name = antmoc_mgxs
version = 0.1.0
license = MIT
description = Multi-group cross-section manipulation
long_description = file: README.md
author = An Wang
author_email = wangan.cs@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    h5py
    numpy

[options.packages.find]
where=src
